--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,15 +28,14 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-#  audioplayers: ^0.19.0
   record: ^2.1.1
   path_provider: ^2.0.2
   fluttertoast: ^8.0.7
-  #  share: ^0.6.5+4
   flutter_spinkit: ^5.0.0
   http: ^0.13.3
   enum_to_string: ^2.0.1
   rflutter_alert: ^2.0.2
+  just_audio: ^0.7.5
 
 dev_dependencies:
   flutter_test:
